--- a/styles/index.css
+++ b/styles/index.css
@@ -65,3 +65,57 @@ p {
   font-size: 24px;
   font-weight: 400;
 }
+.productive-users {
+  border-radius: 24px;
+  background: rgba(78, 71, 255, 0.1);
+}
+.productives-content {
+  display: flex;
+  justify-content: space-evenly;
+}
+.productive {
+  padding: 50px 0;
+  text-align: center;
+}
+
+.productive h2 {
+  color: rgb(78, 71, 255);
+  font-size: 80px;
+  font-weight: 700;
+}
+
+/* user review */
+
+.reviewer-details {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.reviewer-details img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.fa-star {
+  color: rgb(255, 204, 0);
+}
+
+.feedback-content {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
+.review {
+  margin-top: 50px;
+  border-radius: 24px;
+  background: rgba(78, 71, 255, 0.1);
+  padding: 20px;
+}
+.review-title {
+  margin: 20px 0;
+}
+.reviewer-details {
+  margin: 20px 0;
+}
