--- a/styles/index.css
+++ b/styles/index.css
@@ -119,3 +119,34 @@ p {
 .reviewer-details {
   margin: 20px 0;
 }
+.touch {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.touch-title {
+  font-size: 65px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 16px;
+  margin: 10px 0;
+}
+
+.touch-btn {
+  width: 100%;
+  margin: 10px 0;
+}
+
+.footer-content {
+  width: 60%;
+  margin: 0 auto;
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
