--- a/styles/index.css
+++ b/styles/index.css
@@ -39,9 +39,9 @@ button:hover {
   background: orange;
 }
 
-.bg-orange {
+/* .bg-orange {
   color: orange;
-}
+} */
 
 img {
   width: 100%;
@@ -65,6 +65,7 @@ p {
   font-size: 24px;
   font-weight: 400;
 }
+
 .productive-users {
   border-radius: 24px;
   background: rgba(78, 71, 255, 0.1);
@@ -119,14 +120,18 @@ p {
 .reviewer-details {
   margin: 20px 0;
 }
+
+/* get in touch section */
 .touch {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: none;
 }
 
 .touch-title {
-  font-size: 65px;
+  font-size: 97px;
+  padding: 129px 115px;
 }
 
 input {
@@ -135,6 +140,7 @@ input {
   border-radius: 10px;
   font-size: 16px;
   margin: 10px 0;
+  border: none;
 }
 
 .touch-btn {
@@ -149,4 +155,60 @@ input {
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+li {
+  list-style-type: none;
+  margin: 10px 0;
+}
+
+footer {
+  border-radius: 24px;
+  background: rgba(78, 71, 255, 0.1);
+}
+
+.btn {
+  border-radius: 10px;
+  background: rgb(78, 71, 255);
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 700;
+  padding: 10px 15px;
+  cursor: pointer;
+  border: none;
+  transform: 0.2s all;
+}
+
+.logo {
+  color: rgb(78, 71, 255);
+  font-size: 34px;
+  font-weight: 900;
+}
+
+.banner-title {
+  color: rgb(37, 36, 50);
+  font-size: 65px;
+  font-weight: 700;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.container {
+  width: 80%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.section-title {
+  color: rgb(37, 36, 50);
+  font-size: 42px;
+  font-weight: 700;
 }
